Contrast/visualization correction of table borders
Updated th and .table color border
Added td color border

--- a/obsidian.css
+++ b/obsidian.css
@@ -429,15 +429,20 @@ img {
 
 th {
   font-weight: 800 !important;
+  border: 1px solid var(--background-primary-alt) !important;
+}
+
+td {
+  border: 1px solid var(--background-primary-alt) !important
 }
 
 thead {
-  border-bottom: 4px solid var(--background-modifier-border);
+  border-bottom: 4px solid var(--background-primary-alt);
 }
 
 .table {
   background-color: var(--background-secondary-alt);
-  border: 1px solid var(--background-modifier-border);
+  border: 1px solid var(--background-primary-alt);
   padding: 4px;
   line-height: normal;
   display: block;
